updates broken tests for deleting files. (#182)
* updates broken tests for deleting files.

* update test.
